# ChangeLog for media-libs/xine-lib
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.622 2010/02/26 16:26:26 ssuominen Exp $

  26 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  xine-lib-1.1.18.ebuild:
  Include upstream compat.c in src/dxr3/ for em8300 < 0.18.0 drivers compat
  wrt #306857, thanks to Juergen Rose for reporting.

  24 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  xine-lib-1.1.18.ebuild:
  Missing app-arch/xz-utils depend wrt #306715.

  24 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  xine-lib-1.1.18.ebuild:
  Keyword ~sparc wrt #306645.

*xine-lib-1.1.18 (24 Feb 2010)

  24 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  +xine-lib-1.1.18.ebuild:
  Version bump wrt #306643, thanks to Arseny Solokha for reporting.

  17 Jan 2010; Raúl Porcel <armin76@gentoo.org> xine-lib-1.1.17.ebuild:
  alpha/arm/ia64/sparc stable wrt #297903

  14 Jan 2010; Jeroen Roovers <jer@gentoo.org> xine-lib-1.1.17.ebuild:
  Stable for HPPA (bug #297903).

  09 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  xine-lib-1.1.17.ebuild:
  stable x86, bug 297903

  07 Jan 2010; Brent Baude <ranger@gentoo.org> xine-lib-1.1.17.ebuild:
  Marking xine-lib-1.1.17 ppc for bug 297903

  06 Jan 2010; Samuli Suominen <ssuominen@gentoo.org>
  xine-lib-1.1.17.ebuild:
  amd64 stable wrt #297903

  06 Jan 2010; Brent Baude <ranger@gentoo.org> xine-lib-1.1.17.ebuild:
  Marking xine-lib-1.1.17 ppc64 for bug 297903

*xine-lib-1.1.17 (02 Dec 2009)

  02 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  +xine-lib-1.1.17.ebuild:
  Version bump wrt #295396, thanks to Arseny Solokha for reporting.

  21 Oct 2009; Gordon Malm <gengor@gentoo.org> xine-lib-1.1.16.3-r2.ebuild:
  Move TEXTREL patch out of $FILESDIR.

  21 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  xine-lib-1.1.16.3-r1.ebuild, xine-lib-1.1.16.3-r2.ebuild:
  Remove aRts support.

*xine-lib-1.1.16.3-r2 (20 Oct 2009)
