@@ -1,8 +1,10 @@
 DIST xine-lib-1.1.15-textrel-fix.patch 29373 RMD160 4702a26f42251614f5f6c99b4770f82da36577ae SHA1 e04d04dbd736fd17be8cf0583d47630850a89bf9 SHA256 1d6aa047cb0a13f248aea2e06e16b9758b9c39d8b7e42b32d0b52b424d26b33e
 DIST xine-lib-1.1.17.tar.bz2 7528937 RMD160 ecac0711431a94c74edaf8f00e696ade5ed0b6ee SHA1 2438e66bb571c8a4c981581188376687c42b72c4 SHA256 14e17e1665c0aa90f958204570060a3aebded2b93078c5fae14ca8a92c0e79cf
 DIST xine-lib-1.1.18-compat.c.tbz2 766 RMD160 1d6a0c48e6b95125a7b9ea23d408c3705283d728 SHA1 cb14ac854d0616fedaec040e40c66e135fcbfb39 SHA256 e4543f8e31fb1a0ccffdebc6d7f05c9fdf3ba1137083174cdc8d0de2aa9df0f0
+DIST xine-lib-1.1.18.1.tar.xz 5778900 RMD160 eba67ce00519d816f816e9aee205da71d432378e SHA1 38e174651c4baaf9d101735236808c3ad5de2f59 SHA256 fa280f1d0f8592042c178257a312cf837e75580134e02205099e649e38fa6d9b
 DIST xine-lib-1.1.18.tar.xz 5785444 RMD160 9303a0b0cd0d18ca197df167adfaba9784e0c9d5 SHA1 8acb55a8fc85b1717e4e8f78508905007ff6f728 SHA256 41f04822bb5e0726b43bd3c38f991068c32fbec80cbc769e8c2e8704b9956226
 EBUILD xine-lib-1.1.17.ebuild 5513 RMD160 a82efb1385c7f360ee8132b044cfe995016de50c SHA1 e05af589a3024c1535164ee07ec85d36fc66362a SHA256 f62af85e58e204472ab34a15b0b935e48e2308563d5e9ecd1dead53dcf96546b
+EBUILD xine-lib-1.1.18.1.ebuild 5591 RMD160 b1a0525973b44cd6b0054c127e49a72e7c008053 SHA1 98935c1158ffa0c276305fac699303fea842a4f9 SHA256 10d9119c6903e226b1661c5901e8a7edc46ae0c46d0bc44c6d3078e9f3dd75d2
 EBUILD xine-lib-1.1.18.ebuild 5672 RMD160 d3a6280d2ac709ca1d2f9604ad61dfb9c7939044 SHA1 8261705f657869cf72c5090d4fb65e6ea8bbc315 SHA256 6a394bdf24b729b6e7e9566e17e71bfcf79054a1bf2188feee7e663d7d0b7961
-MISC ChangeLog 72071 RMD160 ff1c5c7fcc9bf83256c49a1f66108c4fe23699b6 SHA1 927ecae529afcb2f986cf67292a528a646f99f2a SHA256 dc75bacfbb5544d59a83ad439a2fe470985fc1dff0020ce995ead5b24e57c71f
+MISC ChangeLog 72201 RMD160 ab890737e005821682bec307e323aedb8e3e7245 SHA1 221b87a5332a16d14f66deb0f2ac198aa3d76d4c SHA256 f5a99c8b23ba6befab8021cd9f23f56c5d4ce0858aa53162fee007839e45a55a
 MISC metadata.xml 2913 RMD160 ea5722272700444f2ffe366feb88dfd0a18636df SHA1 97d2d10cc63bde0a4bfc46b9b8c4474ee0337b45 SHA256 4929566b88860ef0c53c15ed84ce5d8bbd36692461631fd3d4814dc9bc0807cf
