@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/xine-lib
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.622 2010/02/26 16:26:26 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.623 2010/03/16 10:31:56 aballier Exp $
+
+*xine-lib-1.1.18.1 (16 Mar 2010)
+
+  16 Mar 2010; Alexis Ballier <aballier@gentoo.org>
+  +xine-lib-1.1.18.1.ebuild:
+  version bump
 
   26 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
   xine-lib-1.1.18.ebuild:
